# DataNexus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
consumer_example/: consumer.py
docs/: architecture.md
extract_service/: __init__.py  alerts.py  auth.py  config.py  domains.py  errors.py  event_bus.py  logging_config.py  main.py  metrics.py  models.py  object_store.py  storage.py  webhooks.py  worker.py
requirements/: bulk-extract-distribution-spec.md  datanexus-critique.md
scripts/: smoke.py
tests/: conftest.py  test_api_lifecycle.py  test_failure_modes.py  test_observability.py  test_retention.py  test_spec_conformance.py  test_webhooks.py
